--- a/Shotgun/Packages/manifest.json
+++ b/Shotgun/Packages/manifest.json
@@ -2,9 +2,12 @@
   "dependencies": {
     "com.unity.ads": "2.0.8",
     "com.unity.analytics": "3.2.2",
-    "com.unity.collab-proxy": "1.2.11",
+    "com.unity.collab-proxy": "1.2.15",
+    "com.unity.package-manager-doctools": "1.0.0-preview.20",
     "com.unity.package-manager-ui": "2.0.3",
-    "com.unity.purchasing": "2.0.1",
+    "com.unity.package-validation-suite": "0.4.0-preview.12",
+    "com.unity.purchasing": "2.0.3",
+    "com.unity.scripting.python": "file:D:/projects/com.unity.scripting.python/PythonNet/Packages/com.unity.scripting.python",
     "com.unity.textmeshpro": "1.3.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
