--- a/Shotgun/Packages/manifest.json
+++ b/Shotgun/Packages/manifest.json
@@ -3,9 +3,7 @@
     "com.unity.ads": "2.0.8",
     "com.unity.analytics": "3.2.2",
     "com.unity.collab-proxy": "1.2.15",
-    "com.unity.package-manager-doctools": "1.0.0-preview.20",
-    "com.unity.package-manager-ui": "2.0.3",
-    "com.unity.package-validation-suite": "0.4.0-preview.12",
+    "com.unity.package-manager-ui": "2.0.7",
     "com.unity.purchasing": "2.0.3",
     "com.unity.textmeshpro": "1.3.0",
     "com.unity.modules.ai": "1.0.0",
@@ -37,7 +35,8 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.unity.scripting.python": "file:D:/projects/com.unity.scripting.python/PythonNet/Packages/com.unity.scripting.python"
   },
   "registry": "https://staging-packages.unity.com"
 }
