* Now using relative paths (Unity paths)

--- a/Shotgun/Packages/com.unity.integrations.shotgun/Tests/ShotgunTests.asmdef
+++ b/Shotgun/Packages/com.unity.integrations.shotgun/Tests/ShotgunTests.asmdef
@@ -1,19 +1,24 @@
 {
     "name": "ShotgunTests",
     "references": [
-        "Unity.Integrations.Shotgun",
-        "Unity.Scripting.Python.Editor"
-    ],
-    "optionalUnityReferences": [
-        "TestAssemblies"
+        "Unity.Scripting.Python.Editor",
+        "UnityEngine.TestRunner",
+        "UnityEditor.TestRunner",
+        "Unity.Integrations.Shotgun"
     ],
     "includePlatforms": [
         "Editor"
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
-    "autoReferenced": true,
-    "defineConstraints": []
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "nunit.framework.dll",
+        "Python.Runtime.dll"
+    ],
+    "autoReferenced": false,
+    "defineConstraints": [
+        "UNITY_INCLUDE_TESTS"
+    ],
+    "versionDefines": []
 }
