--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "com.unity.integrations.shotgun",
     "displayName" : "Shotgun",
     "version" : "0.9.0-preview",
-    "dependencies" : { "com.unity.scripting.python" : "2.0.0-preview", "com.unity.recorder": "2.0.3-preview.1" },
+    "dependencies" : { "com.unity.scripting.python" : "2.0.0-preview.2", "com.unity.recorder": "2.0.3-preview.1" },
     "unity": "2019.3",
     "description" : "This package enables Unity to work with Shotgun and use Shotgun toolkit applications.",
     "keywords" : [ "shotgun" ]
