--- a/.yamato/yamato.yml
+++ b/.yamato/yamato.yml
@@ -116,13 +116,31 @@ all_tests:
     - .yamato/yamato.yml#dev_tests
     - .yamato/yamato.yml#promotion_test
 
-publish:
-  name: Publish to Internal Registry
+publish_dev:
+  name: Publish Dev to Internal Registry
   agent:
     type: Unity::VM
     image: package-ci/win10:stable
     flavor: b1.small
   commands:
+    - python .yamato/check_version.py -v --is-dev
+    - npm install upm-ci-utils@stable -g --registry https://api.bintray.com/npm/unity/unity-npm
+    - upm-ci package publish
+  artifacts:
+    artifacts:
+      paths:
+        - "upm-ci~/packages/*.tgz"
+  dependencies:
+    - .yamato/yamato.yml#dev_tests
+
+publish_release:
+  name: Publish Release to Internal Registry
+  agent:
+    type: Unity::VM
+    image: package-ci/win10:stable
+    flavor: b1.small
+  commands:
+    - python .yamato/check_version.py -v
     - npm install upm-ci-utils@stable -g --registry https://api.bintray.com/npm/unity/unity-npm
     - upm-ci package publish
   artifacts:
@@ -141,6 +159,7 @@ promote:
   variables:
     UPMCI_PROMOTION: 1
   commands:
+    - python .yamato/check_version.py -v
     - npm install upm-ci-utils@stable -g --registry https://api.bintray.com/npm/unity/unity-npm
     - upm-ci package promote
   artifacts:
@@ -149,5 +168,5 @@ promote:
         - "upm-ci~/packages/*.tgz"
   dependencies:
     - .yamato/yamato.yml#all_tests
-    - .yamato/yamato.yml#publish
+    - .yamato/yamato.yml#publish_release
 
