initialize shotgun without a client (#71)
* initialize shotgun without a client

* Documentation modified to reflect changes related to Shotgun-4:
No more Unity hub problems, as the unity hub has being bypassed

Name of function in PythonRunner changed..Shotgun.cs now reflects the change

Shotgun Tests for stand_alone publishing changed. simple call to PythonRunner
without need to connect to out of process server

* Changed unity python package to 4.0.0.exp5

* unnessary comments removed, change to unit test Assert, IEnumerable Wait removed.
shotgunConfig space amended

* Removed call to sg_client...direct UnityEngine import

* fixed typos and summary docstring

* Proper text for summary docstring

Co-authored-by: vkovec <viktoria.kovecses@gmail.com>
Co-authored-by: mojibola obadimeji <mojibola.obadimeji@imaginary-spaces.com>

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "com.unity.integrations.shotgun",
     "displayName" : "Shotgun for Unity",
     "version" : "0.10.0-preview.1",
-    "dependencies" : { "com.unity.scripting.python" : "2.0.0-preview.6", "com.unity.recorder": "2.2.0-preview.4" },
+    "dependencies" : { "com.unity.scripting.python" : "4.0.0-exp.5", "com.unity.recorder": "2.2.0-preview.4" },
     "unity": "2019.3",
     "description" : "This package enables Unity to work with Shotgun and use Shotgun toolkit applications.",
     "keywords" : [ "shotgun" ]
