Fixed case of Shotgrid -> ShotGrid, fixed broken URLs

--- a/Editor/Unity.Integrations.ShotGrid.asmdef
+++ b/Editor/Unity.Integrations.ShotGrid.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Unity.Integrations.Shotgrid",
+    "name": "Unity.Integrations.ShotGrid",
     "references": [
         "Unity.Scripting.Python.Editor",
         "Unity.Recorder.Editor"
