SHOTGRID-62: Fixed case of Shotgrid -> ShotGrid, fixed broken URLs (#83)
* Fixed case of Shotgrid -> ShotGrid, fixed broken URLs

* ignore appcollector.yaml/meta

--- a/.gitignore
+++ b/.gitignore
@@ -56,5 +56,8 @@ Shotgun/Assets/Shotgun
 Shotgun/Logs/Packages-Update.log
 Shotgun/ValidationSuiteResults
 
-# npm
-.npmignore
+# macOS
+.DS_Store
+
+# JetBrains
+.idea
