updated dependencies and yamato editor versions (#84)
* updated dependencies and yamato editor versions

* added appcollector.yaml to npmignore

* ignore .idea and .DS_Store files

--- a/.gitignore
+++ b/.gitignore
@@ -56,8 +56,11 @@ Shotgun/Assets/Shotgun
 Shotgun/Logs/Packages-Update.log
 Shotgun/ValidationSuiteResults
 
+# npm
+.npmignore
+
+# jetbrains
+.idea
+
 # macOS
 .DS_Store
-
-# JetBrains
-.idea
