--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
     "name": "com.unity.integrations.shotgrid",
     "displayName" : "ShotGrid for Unity",
     "version" : "1.1.0-exp.2",
-    "dependencies" : { "com.unity.scripting.python" : "4.0.0-exp.5", "com.unity.recorder": "2.5.5" },
+    "dependencies" : {
+        "com.unity.scripting.python" : "4.0.0-pre.1",
+        "com.unity.recorder": "2.5.7"
+    },
     "unity": "2019.4",
     "description" : "This package enables Unity to work with ShotGrid and use ShotGrid Toolkit applications.",
     "keywords" : [ "shotgrid"]
